--- a/ArifTanPortfolio/Pages/About.cshtml
+++ b/ArifTanPortfolio/Pages/About.cshtml
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="col-lg-4 text-center">
-                <img src="~/images/profile/arif-tan-about.jpg" alt="Arif Tan - Professional Photo" 
+                <img src="~/images/ariftan-logo.png" alt="Arif Tan - Professional Photo" 
                      class="img-fluid rounded shadow-lg" style="max-width: 350px;">
             </div>
         </div>
