--- a/ArifTanPortfolio/Pages/Shared/_Layout.cshtml
+++ b/ArifTanPortfolio/Pages/Shared/_Layout.cshtml
@@ -15,11 +15,11 @@
     <meta property="og:image" content="~/images/profile/arif-tan-og.jpg" />
     
     <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
+    @* <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="@ViewData["Title"] - Arif Tan" />
     <meta name="twitter:description" content="@ViewData["Description"] ?? "Software Engineer & Future Tech Leader"" />
     <meta name="twitter:image" content="~/images/profile/arif-tan-og.jpg" />
-    
+     *@
     <title>@ViewData["Title"] - Arif Tan</title>
     
     <!-- Bootstrap CSS -->
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="~/images/ariftan-logo.png" />
     
     <!-- Structured Data -->
     <script type="application/ld+json">
