--- a/ArifTanPortfolio/Pages/Shared/_Layout.cshtml
+++ b/ArifTanPortfolio/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <meta property="og:title" content="@ViewData["Title"] - Arif Tan" />
     <meta property="og:description" content="@ViewData["Description"] ?? "Software Engineer & Future Tech Leader"" />
     <meta property="og:url" content="https://ariftan.dev" />
-    <meta property="og:image" content="~/images/profile/arif-tan-og.jpg" />
+    <meta property="og:image" content="~/images/ariftan-logo.png" />
     
     <!-- Twitter Card -->
     @* <meta name="twitter:card" content="summary_large_image" />
