halfway commit for portfolio and add resume

--- a/ArifTanPortfolio/Pages/Index.cshtml
+++ b/ArifTanPortfolio/Pages/Index.cshtml
@@ -269,10 +269,10 @@
                     collaborating on innovative projects, I'd love to connect with you.
                 </p>
                 <div class="d-flex flex-wrap justify-content-center gap-3">
-                    <a href="/Contact" class="btn btn-warning btn-lg px-4">
+                    <a href="/Contact" class="btn btn-warning text-dark btn-lg px-4">
                         <i class="fas fa-envelope me-2"></i>Start a Conversation
                     </a>
-                    <a href="~/files/arif-tan-resume.pdf" class="btn btn-outline-light btn-lg px-4" target="_blank">
+                    <a href="~/files/ariftan_cv.pdf" class="btn btn-outline-light btn-lg px-4" target="_blank">
                         <i class="fas fa-download me-2"></i>Download Resume
                     </a>
                 </div>
