--- a/ArifTanPortfolio/Pages/Shared/_Layout.cshtml
+++ b/ArifTanPortfolio/Pages/Shared/_Layout.cshtml
@@ -34,7 +34,8 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="~/images/ariftan-logo.png" />
+    @* <link rel="icon" type="image/x-icon" href="~/images/ariftan-logo.png" /> *@
+    <link rel="icon" type="image/png" href="~/images/ariftan-logo.png" />
     
     <!-- Structured Data -->
     <script type="application/ld+json">
